Klesti.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: klesti-nginx
  namespace: klesti
  labels:
    name: Klesti
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: klesti8701/intern
        ports:
        - containerPort: 80
       
---
