mongo.yaml
apiVersion:v1
kind: apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongdb
  labels:
    apps: mongdb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongdb
  template:
    metadata:
      labels:
        app: mongdb
    spec:
      containers:
      - name: mongdb
        image: mongodb
        ports:
        - containerPort: 27017
