nginx-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: nginx-service
spec:
  selector:
    app: Klesti
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
