ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klestisingress
  labels:
    name: klestisingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: interns.dsh
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
